# a-little-rust-with-your-c

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  main.c
.devcontainer/: Dockerfile  devcontainer.json
cmake/: CMakeCargo.cmake
lib/: .gitignore  CMakeLists.txt  Cargo.toml
lib/src/: lib.rs
rust-lib/: Cargo.toml  bindings.h  build.rs
rust-lib/src/: lib.rs
src/: CMakeLists.txt  main.c
